force-app/main/default/objects/Employee_Pay_Period__c/Employee_Pay_Period__c.object-meta.xml
<CustomObject>
    <label>Employee Pay Period</label>
    <nameField>
        <label>Employee Pay Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Pay Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>