force-app/main/default/objects/Employee_Pay_Period__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <summarizedField>Payment_Line_Item__c.Commission_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Line_Item__c.Employee_Pay_Period__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>