force-app/main/default/objects/Employee_Pay_Period__c/fields/Funded_Count__c.field-meta.xml
<CustomField>
    <fullName>Funded_Count__c</fullName>
    <label>Funded Count</label>
    <summaryForeignKey>Payment_Line_Item__c.Employee_Pay_Period__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>