force-app/main/default/objects/Employee_Pay_Period__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>YEAR(Pay_Period__r.Start_Date__c) = YEAR(TODAY()) &amp;&amp; MONTH(Pay_Period__r.Start_Date__c) = MONTH(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>