force-app/main/default/objects/Employee_Pay_Period__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Period</label>
    <referenceTo>Pay_Period__c</referenceTo>
    <relationshipLabel>Employee Pay Periods</relationshipLabel>
    <relationshipName>Employee_Pay_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>