force-app/main/default/objects/Employee_Pay_Period__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Pay_Periods1</relationshipName>
    <type>Lookup</type>
</CustomField>