force-app/main/default/objects/Employee_Pay_Period__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Loan Officer</fullName>
            </value>
            <value>
                <fullName>Outside Loan Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>